# eta-predictor

./: .dockerignore  Dockerfile  mlflow.db  notes.txt  pyproject.toml
app/: main.py  predictor.py  schemas.py
mlflow-artifacts/1/models/m-26e1c98e3bca4910b47ea44a61258da0/artifacts/: MLmodel  model.pkl
mlflow-artifacts/1/models/m-4d3b0dc6034246819eda01f02880d9e3/artifacts/: MLmodel
mlflow-artifacts/1/models/m-60ab70695268491384dc472b0e574ea5/artifacts/: MLmodel  conda.yaml
mlflow-artifacts/1/models/m-66e1ecffa3c5421faaf1100a2d7a5986/artifacts/: MLmodel  model.pkl
mlflow-artifacts/1/models/m-6ae0170f31a2474b981890e0b44ab9f5/artifacts/: MLmodel  model.pkl
mlflow-artifacts/1/models/m-98a010dc61ef405fbba5cbdb1090f77f/artifacts/: MLmodel
mlflow-artifacts/1/models/m-9a2f7178a5d84d558458f5f355ae971f/artifacts/: MLmodel
mlflow-artifacts/1/models/m-a3b5522d8c9f49a5a61ca33b6328780b/artifacts/: MLmodel  serving_input_example.json
mlflow-artifacts/1/models/m-d6fe192eca0d4284a50aba060bd527f5/artifacts/: MLmodel
mlflow-artifacts/1/models/m-fb835d2e234e4d07b842c0a95ca1fbd3/artifacts/: MLmodel  input_example.json  model.pkl
models/: eta_model_e2b20e60.joblib
scripts/: first_mlflow_run.py  generate_data.py  train.py
